--- a/packages/compass-aggregations/src/components/pipeline-builder-toolbar/collation-collapser.less
+++ b/packages/compass-aggregations/src/components/pipeline-builder-toolbar/collation-collapser.less
@@ -3,6 +3,6 @@
   margin-right: 3px;
 
   button {
-    // width: 30px;
+    white-space: nowrap;
   }
 }
