--- a/packages/compass-aggregations/src/components/pipeline-builder-toolbar/pipeline-builder-toolbar.less
+++ b/packages/compass-aggregations/src/components/pipeline-builder-toolbar/pipeline-builder-toolbar.less
@@ -42,5 +42,6 @@
     border: 1px @gray5 solid;
     border-radius: 4px;
     width: 100%;
+    white-space: nowrap;
   }
 }
