--- a/packages/compass-aggregations/src/components/pipeline-preview-toolbar/pipeline-preview-toolbar.less
+++ b/packages/compass-aggregations/src/components/pipeline-preview-toolbar/pipeline-preview-toolbar.less
@@ -38,6 +38,7 @@
     font-size: 12px;
     text-transform: uppercase;
     color: @gray3;
+    white-space: nowrap;
   }
 
   &-toggle-comments, &-toggle-sample, &-toggle-auto-preview {
