--- a/packages/compass-aggregations/src/components/pipeline/collation-toolbar.less
+++ b/packages/compass-aggregations/src/components/pipeline/collation-toolbar.less
@@ -12,16 +12,16 @@
 }
 
 .collation-toolbar-input-wrapper {
-  width: 370px;
+  width: 100%;
   height: 30px;
   position: relative;
   display: flex;
   border-radius: 14px;
   border: 1px @gray5 solid;
   background: @pw;
-  margin-right: 10px;
   overflow: hidden;
   padding: 4px;
+  margin-right: 5px;
 
   .collation-toolbar-input-label {
     background: @gray5;
