--- a/packages/compass-aggregations/src/components/stage-preview-toolbar/stage-preview-toolbar.less
+++ b/packages/compass-aggregations/src/components/stage-preview-toolbar/stage-preview-toolbar.less
@@ -2,4 +2,7 @@
   width: 100%;
   margin-left: 25px;
   font-size: 12px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
