--- a/packages/compass-aggregations/src/components/stage-preview/stage-preview.less
+++ b/packages/compass-aggregations/src/components/stage-preview/stage-preview.less
@@ -10,6 +10,9 @@
   &-invalid {
     padding-left: 15px;
     margin: auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   &-out {
